<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Thank you for trying MobSy: MOBile Sightseeing sYstem!</string>
    <string name="app_name">Mobsy</string>
    <string name="choose_mode">CHOOSE AREA BROWSING MODE:</string>
    <string name="free">Free Browsing</string>
    <string name="predef">Predefined Paths</string>
    <string name="MapMode">Map Mode</string>
    <string name="free_browse_descr">Browse the area around 
    you and get info about the nearby sites on-the-go</string>
    <string name="predef_descr">Follow the guided predefined routes of attractions</string>
	<string name="KazanKremlin_descr">You are approaching Kazan Kremlin, the chief historic citadel of Tatarstan, situated in the city of Kazan. It was built on behest of Ivan the Terrible on the ruins of the former castle of Kazan khans. It was declared a World Heritage Site in 2000.</string>
	<string name="Biler_descr">Bilär (Tatar Cyrillic: Биләр; also Bilyar, Bülär, Бүләр) was a medieval city in Volga Bulgaria and its second capital before the Mongol invasion of Volga Bulgaria. It was located on the left bank of the Small Cheremshan River in modern-day Alexeyevsky District of the Republic of Tatarstan.</string>
	<string name="Berkeley_descr">The University of California, Berkeley (also referred to as UC Berkeley, Cal Berkeley, or just "Berkeley" or "Cal"), is a teaching and research university established in 1868 and located in Berkeley, California, USA. Berkeley is the most consistently well ranked university in the world overall as shown by a meta-analysis of subject/departmental data over the last sixteen years from the United States National Research Council, the US News and World Report, and Times Higher Education. Berkeley has the highest number of distinguished graduate programs ranked in the top 10 in their fields by the United States National Research Council.</string>
</resources>
