<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bronze"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/choose_mode"
    android:id="@+id/textView"
    android:textSize="25dp"
    android:textStyle="bold"
    android:gravity="center_horizontal" 
    android:textColor="#FFFF00"
    android:layout_marginTop="35dp" android:typeface="sans" android:layout_weight="0.1"/>
 
 <LinearLayout
 	android:orientation="vertical"
  	android:gravity="center"
  	android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:layout_weight="180">
 <Button android:text="@string/MapMode"
		android:id="@+id/button3"
		android:layout_width="fill_parent" 
		android:textStyle="bold"
		android:textColor="#FFFFFF"
		android:textSize="35dp" 
		android:background="@drawable/button_style" 
		android:typeface="sans" android:layout_weight="10" android:layout_height="95dp"></Button>  		
 <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/free_browse_descr"
    android:id="@+id/free_browse_descr"
    android:textSize="15dp"
    android:textStyle="bold"
    android:gravity="center_horizontal" 
    android:textColor="#FFFFFF"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    />  
     
  <Button android:text="@string/predef" 
		android:id="@+id/button1" 
		android:layout_width="fill_parent" 
		android:textStyle="bold"
		android:textColor="#FFFFFF"
		android:ellipsize="middle" 
		android:textSize="35dp" 
		android:background="@drawable/button_style"
		android:layout_weight="10" android:layout_height="95dp"></Button>
		
  <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/predef_descr"
    android:id="@+id/free_bowse_descr"
    android:textSize="15dp"
    android:textStyle="bold"
    android:gravity="center_horizontal" 
    android:textColor="#FFFFFF"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"/>
  </LinearLayout>
  
 </LinearLayout>
